# operator

./: CMakeLists.txt  MinxinOperator.h  main.cpp
